--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
 	"embeddedLanguageFormatting": "auto",
 	"htmlWhitespaceSensitivity": "css",
 	"insertPragma": false,
-	"jsxBracketSameLine": false,
+	"jsxBracketSameLine": true,
 	"jsxSingleQuote": true,
 	"proseWrap": "always",
 	"quoteProps": "consistent",
